# Ticket-summarizer

./: .gitignore  README.md  dummy_tickets.csv  pyproject.toml
sample_data/: tiny_demo.csv
summarizer/: aggregator.py  chunker.py  cli.py  config.py  llm_client.py  loader.py  writer.py
tests/: test_llm_client.py  test_loader.py
zscaler_ticket_summarizer/summarizer/: config.py
zscaler_ticket_summarizer/tests/: test_llm_client.py
